@@ -400,3 +400,26 @@
 
 ##############################################################
 
+%typemap(in) wxSystemColour {
+	$1 = (wxSystemColour)NUM2INT($input);
+}
+
+%typemap(out) wxSystemColour {
+    $result = INT2NUM((int)$1);
+}
+
+%typemap(in) wxSystemFont {
+	$1 = (wxSystemFont)NUM2INT($input);
+}
+
+%typemap(out) wxSystemFont {
+    $result = INT2NUM((int)$1);
+}
+
+%typemap(in) wxSystemMetric {
+	$1 = (wxSystemMetric)NUM2INT($input);
+}
+
+%typemap(out) wxSystemMetric {
+    $result = INT2NUM((int)$1);
+}
